--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17
-yarn_mappings=1.17+build.7
-loader_version=0.11.3
+    # check these on https://fabricmc.net/versions.html
+    minecraft_version=1.18.1
+    yarn_mappings=1.18.1+build.1
+    loader_version=0.12.10
 
 # Mod Properties
-mod_version=2.1
+mod_version=2.2
 maven_group=me.kirantipov.mods
 archives_base_name=eggofcapitalism
